@@ -38,12 +38,10 @@ class BrokenRedirectsPage extends PageQueryPage {
 		                p1.page_title     AS title,
 		                pl_namespace,
 		                pl_title
-		           FROM ($pagelinks, $page AS p1)
-		      LEFT JOIN $page AS p2
-		             ON pl_namespace=p2.page_namespace AND pl_title=p2.page_title
-		          WHERE p1.page_is_redirect=1
-		            AND pl_from=p1.page_id
-		            AND p2.page_namespace IS NULL";
+		           FROM $pagelinks AS pl
+                   JOIN $page p1 ON (p1.page_is_redirect=1 AND pl.pl_from=p1.page_id)
+		      LEFT JOIN $page AS p2 ON (pl_namespace=p2.page_namespace AND pl_title=p2.page_title
+    		                AND p2.page_namespace IS NULL)";
 		return $sql;
 	}
 
