@@ -52,6 +52,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5537) Add stub language file for Samogitian (bat-smg); inherits Lithuanian (lt)
 * Don't force edit summaries when a user is editing their own user/talk page
 * (bug 5510) Warning produced when using {{SUBPAGENAME}} in some namespaces
+* (bug 385) Installer support for PostgreSQL, fixes for PG compatibility
+
 
 == Compatibility ==
 
